--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
   <!DOCTYPE html>
-<!-- Coding By CodingNepal - youtube.com/codingnepal -->
+<!-- Coding By MasterWithAhmad - ahmadprocode@gmail.com -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
